fixed gap buttons

--- a/resources/scss/_comic.scss
+++ b/resources/scss/_comic.scss
@@ -13,7 +13,7 @@
         height: 100px;
         display: flex;
         align-items: center;
-        gap: 20px;
+        gap: 10px;
     }
 
     .comic-card {
